revert to try to fix font issues on mobile

--- a/_sass/_highlights.scss
+++ b/_sass/_highlights.scss
@@ -4,12 +4,9 @@
   color: #fbf1c7;
   background-color: #282828;
 }*/
-
-@import "variables.scss";
-
 div.highlight {
-  color: $lightForeground;
-  background-color: $codeBackground;
+  color: #fbf1c7;
+  background-color: #282828;
   padding: 7px 7px 7px 10px;
   //border: 1px solid #ddd;
   //-moz-box-shadow: 3px 3px rgba(0,0,0,0.1);
